ns-isolation/prod/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  labels:
    app: api
  name: api
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
